--- a/app/NovaWeb/src/modules/main/components/bp-explorer/bp-explorer.html
+++ b/app/NovaWeb/src/modules/main/components/bp-explorer/bp-explorer.html
@@ -1,7 +1,7 @@
 <bp-tree-view class="explorer__tree"
               api="$ctrl.treeApi"
               ng-show="$ctrl.isProjectTreeVisible()"
-              row-data="::[]"
+              row-data="$ctrl.projectExplorerService.projects"
               row-data-observable="$ctrl.projectExplorerService.projectsChangeObservable"
               columns="$ctrl.columns"
               set-selection="$ctrl.setSelectedNode()"
