--- a/app/NovaWeb/src/modules/editorsModule/bp-process/components/modal-dialogs/decisionEditor/decisionEditor.html
+++ b/app/NovaWeb/src/modules/editorsModule/bp-process/components/modal-dialogs/decisionEditor/decisionEditor.html
@@ -47,12 +47,12 @@
                         <span class="fonticon2-delete" ng-class="{'fonticon2__action--disabled':isReadonly}"></span>
                     </span>
                 </div>
-                <div class="col-sm-1" ng-if="!$ctrl.isFirstBranch(condition)">
+                <div class="col-sm-1" ng-if="$ctrl.canReorder(condition)">
                     <button type="button" class="btn btn-secondary btn-icon" ng-disabled="!$ctrl.canMoveUp(condition)" ng-click="$ctrl.moveUp(condition)">
-                        <span class="fonticon2-arrow-up" ng-class="{'fonticon2__action--disabled':isReadonly}"></span>
+                        <span class="fonticon2-arrow-up"></span>
                     </button>
                     <button type="button" class="btn btn-secondary btn-icon" ng-disabled="!$ctrl.canMoveDown(condition)" ng-click="$ctrl.moveDown(condition)">
-                        <span class="fonticon2-arrow-down" ng-class="{'fonticon2__action--disabled':isReadonly}"></span>
+                        <span class="fonticon2-arrow-down"></span>
                     </button>
                 </div>
             </div>
