Refactors conditions to enable re-ordering of branches

--- a/app/NovaWeb/src/modules/editorsModule/bp-process/components/modal-dialogs/decisionEditor/decisionEditor.html
+++ b/app/NovaWeb/src/modules/editorsModule/bp-process/components/modal-dialogs/decisionEditor/decisionEditor.html
@@ -18,7 +18,7 @@
                 <div class="col-sm-6" style="display: inline-block">
                     <div class="nova-form-group nova-floating-label">
                         <input type="text" ng-class="condition.label ? 'nova-form-control input-is-dirty' : 'nova-form-control'" id="storyteller-new-condition-edge-{{$index}}" ng-model="condition.label" maxlength="{{::$ctrl.CONDITION_MAX_LENGTH }}" ng-disabled="$ctrl.isReadonly">
-                        <label for="storyteller-new-condition-edge-{{$index}}" class="nova-label"><i class="fonticon-decision-diamond"></i>{{dialogModel.conditionLabel}}:</label>
+                        <label for="storyteller-new-condition-edge-{{$index}}" class="nova-label"><i class="fonticon-decision-diamond"></i>{{dialogModel.conditionHeader}}:</label>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -32,7 +32,7 @@
                             </button>
                             <ul class="dropdown-menu dropdown-next-node">
                                 <li ng-repeat="node in condition.validMergeNodes">
-                                    <a class="dropdown-menu__item" ng-click="condition.mergeNode = node" href="javascript:void(0);" ng-attr-title="{{node.label}}">
+                                    <a class="dropdown-menu__item" ng-click="condition.mergeNodeId = node.model.id" href="javascript:void(0);" ng-attr-title="{{node.label}}">
                                         <div class="dropdown-menu-item-label">
                                             <i ng-class="$ctrl.getNodeIcon(node)"></i>{{node.label}}
                                         </div>
