checkbox should be hidden for artifacts already in collection

--- a/app/NovaWeb/src/styles/partials/_modal.scss
+++ b/app/NovaWeb/src/styles/partials/_modal.scss
@@ -212,6 +212,10 @@ $modal-open-project-height: 450px;
             .checkbox {
                 min-width: 25px;
             }
+            
+            .search-hidden-checkbox {
+                visibility: hidden;
+            }
 
             & > i {
                 color: $brand-secondary;
