--- a/app/NovaWeb/src/styles/partials/_button.scss
+++ b/app/NovaWeb/src/styles/partials/_button.scss
@@ -187,6 +187,19 @@
     .fonticon-error::before {
         font-size: 2.2rem;
     }
+    &[disabled],
+    &.active[disabled],
+    &[disabled]:hover,
+    &[disabled]:focus,
+    &[disabled]:active,
+    &.disabled,
+    &.disabled:hover,
+    &.disabled:focus,
+    &.disabled:active {
+        color: $gray-lightest;
+        background-color: transparent;
+        border: 0;
+    }
 }
 
 .btn-dropdown-toggle {
