Revert "icon styling for moving branch up down"

--- a/app/NovaWeb/src/modules/editorsModule/bp-process/components/modal-dialogs/decisionEditor/decisionEditor.html
+++ b/app/NovaWeb/src/modules/editorsModule/bp-process/components/modal-dialogs/decisionEditor/decisionEditor.html
@@ -48,11 +48,11 @@
                     </span>
                 </div>
                 <div class="col-sm-1" ng-if="$ctrl.canReorder(condition)">
-                    <button type="button" class="btn btn-secondary btn__icon btn__icon--storyteller-move-branch" ng-disabled="!$ctrl.canMoveUp(condition)" ng-click="$ctrl.moveUp(condition)">
-                        <span class="fonticon2-circle-up"></span>
+                    <button type="button" class="btn btn-secondary btn-icon" ng-disabled="!$ctrl.canMoveUp(condition)" ng-click="$ctrl.moveUp(condition)">
+                        <span class="fonticon2-arrow-up"></span>
                     </button>
-                    <button type="button" class="btn btn-secondary btn__icon btn__icon--storyteller-move-branch" ng-disabled="!$ctrl.canMoveDown(condition)" ng-click="$ctrl.moveDown(condition)">
-                        <span class="fonticon2-circle-down"></span>
+                    <button type="button" class="btn btn-secondary btn-icon" ng-disabled="!$ctrl.canMoveDown(condition)" ng-click="$ctrl.moveDown(condition)">
+                        <span class="fonticon2-arrow-down"></span>
                     </button>
                 </div>
             </div>
