add password recovery tokens table

--- a/svc/db/AdminStorage/AdminStorage_Instance.tt
+++ b/svc/db/AdminStorage/AdminStorage_Instance.tt
@@ -24,6 +24,7 @@ GO
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Tables\LicenseActivityDetails.sql" ) ) #>
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Tables\LicenseActivities.sql" ) ) #>
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Tables\Logs.sql" ) ) #>
+<#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Tables\PasswordRecoveryTokens.sql" ) ) #>
 
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Types\LogsType.sql" ) ) #>
 
