TFS 5414 - Initial implementation of password reset logic

--- a/svc/db/AdminStorage/Procedures.tt
+++ b/svc/db/AdminStorage/Procedures.tt
@@ -20,3 +20,5 @@
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Procedures\GetLicenseUsage.sql" ) ) #>
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Procedures\GetUserPasswordRecoveryRequestCount.sql" ) ) #>
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Procedures\SetUserPasswordRecoveryToken.sql" ) ) #>
+<#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Procedures\GetUserPasswordRecoveryTokens.sql" ) ) #>
+
