FileStorage Maintenance Job implementation

--- a/svc/db/FileStorage/FileStorage_Instance.tt
+++ b/svc/db/FileStorage/FileStorage_Instance.tt
@@ -32,6 +32,7 @@ GO
 
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Jobs\Blueprint_FileStorage_Maintenance.sql" ) ) #>
 
+<#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Jobs\FileStorageMaintenanceJob.sql" ) ) #>
 -- --------------------------------------------------
 -- Always add your code just above this comment block
 -- --------------------------------------------------
