--- a/svc/db/FileStorage/Procedures.tt
+++ b/svc/db/FileStorage/Procedures.tt
@@ -1,6 +1,7 @@
 ﻿<#@ template debug="false" hostspecific="true" language="C#" #>
 <#@ output extension=".sql" encoding="utf-8" #>
 
+<#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Procedures\DeleteExpiredFiles.sql" ) ) #>
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Procedures\DeleteFile.sql" ) ) #>
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Procedures\DeleteFileChunk.sql" ) ) #>
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Procedures\ReadFileHead.sql" ) ) #>
