--- a/svc/db/AdminStorage/AdminStorage_Migration.tt
+++ b/svc/db/AdminStorage/AdminStorage_Migration.tt
@@ -22,6 +22,7 @@ GO
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Migration\7.4.1.0\7.4.1.0.sql" ) ) #>
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Migration\8.0.0.0\8.0.0.0.sql" ) ) #>
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Migration\8.1.0.0\8.1.0.0.sql" ) ) #>
+<#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Migration\8.2.0.0\8.2.0.0.sql" ) ) #>
 
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Data\SetApplicationLabels.sql" ) ) #>
 
