--- a/svc/db/AdminStorage/Migration/8.1.0.0/8.1.0.0.tt
+++ b/svc/db/AdminStorage/Migration/8.1.0.0/8.1.0.0.tt
@@ -10,6 +10,7 @@ Print 'Migrating 8.1.0.0 ...'
 -- -----------------------------------------------------------------------------------------------
 
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"CreatePasswordRecoveryTokens.sql" ) ) #>
+<#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"DropApplicationLabels.sql" ) ) #>
 
 -- -----------------------------------------------------------------------------------------------
 -- Always add your code just above this comment block
