--- a/svc/db/FileStorage/Migration/8.2.0.0/8.2.0.0.tt
+++ b/svc/db/FileStorage/Migration/8.2.0.0/8.2.0.0.tt
@@ -4,7 +4,7 @@
 -- -----------------------------------------------------------------------------------------------
 -- Migration 8.2.0.0
 -- -----------------------------------------------------------------------------------------------
-IF NOT ([dbo].[IsSchemaVersionLessOrEqual](N'8.2.0') <> 0) 
+IF NOT ([FileStore].[IsSchemaVersionLessOrEqual](N'8.2.0') <> 0)
 	set noexec on
 Print 'Migrating 8.2.0.0 ...'
 -- -----------------------------------------------------------------------------------------------
@@ -13,8 +13,8 @@ Print 'Migrating 8.2.0.0 ...'
 -- -----------------------------------------------------------------------------------------------
 -- Always add your code just above this comment block
 -- -----------------------------------------------------------------------------------------------
-IF ([dbo].[IsSchemaVersionLessOrEqual](N'8.2.0') <> 0)
-	EXEC [dbo].[SetSchemaVersion] @value = N'8.2.0';
+IF ([FileStore].[IsSchemaVersionLessOrEqual](N'8.2.0') <> 0)
+	EXEC [FileStore].[SetSchemaVersion] @value = N'8.2.0';
 GO
 set noexec off
 -- -----------------------------------------------------------------------------------------------
