--- a/svc/db/AdminStorage/Migration/8.2.0.0/8.2.0.0.tt
+++ b/svc/db/AdminStorage/Migration/8.2.0.0/8.2.0.0.tt
@@ -9,6 +9,8 @@ IF NOT ([dbo].[IsSchemaVersionLessOrEqual](N'8.2.0') <> 0)
 Print 'Migrating 8.2.0.0 ...'
 -- -----------------------------------------------------------------------------------------------
 
+<#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"RemoveDboAssociations.sql" ) ) #>
+<#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"..\..\Jobs\Blueprint_AdminStorage_Maintenance.sql" ) ) #>
 
 -- -----------------------------------------------------------------------------------------------
 -- Always add your code just above this comment block
