--- a/svc/db/AdminStorage/Migration/7.4.1.0/7.4.1.0.tt
+++ b/svc/db/AdminStorage/Migration/7.4.1.0/7.4.1.0.tt
@@ -4,7 +4,7 @@
 -- -----------------------------------------------------------------------------------------------
 -- Migration 7.4.1.0
 -- -----------------------------------------------------------------------------------------------
-IF NOT ([dbo].[IsSchemaVersionLessOrEqual](N'7.4.1') <> 0) 
+IF NOT ([AdminStore].[IsSchemaVersionLessOrEqual](N'7.4.1') <> 0) 
 	set noexec on
 Print 'Migrating 7.4.1.0 ...'
 -- -----------------------------------------------------------------------------------------------
@@ -13,8 +13,8 @@ Print 'Migrating 7.4.1.0 ...'
 -- -----------------------------------------------------------------------------------------------
 -- Always add your code just above this comment block
 -- -----------------------------------------------------------------------------------------------
-IF ([dbo].[IsSchemaVersionLessOrEqual](N'7.4.1') <> 0)
-	EXEC [dbo].[SetSchemaVersion] @value = N'7.4.1';
+IF ([AdminStore].[IsSchemaVersionLessOrEqual](N'7.4.1') <> 0)
+	EXEC [AdminStore].[SetSchemaVersion] @value = N'7.4.1';
 GO
 set noexec off
 -- -----------------------------------------------------------------------------------------------
