--- a/svc/db/AdminStorage/Migration/8.2.0.0/8.2.0.0.tt
+++ b/svc/db/AdminStorage/Migration/8.2.0.0/8.2.0.0.tt
@@ -4,7 +4,7 @@
 -- -----------------------------------------------------------------------------------------------
 -- Migration 8.2.0.0
 -- -----------------------------------------------------------------------------------------------
-IF NOT ([dbo].[IsSchemaVersionLessOrEqual](N'8.2.0') <> 0) 
+IF NOT ([AdminStore].[IsSchemaVersionLessOrEqual](N'8.2.0') <> 0) 
 	set noexec on
 Print 'Migrating 8.2.0.0 ...'
 -- -----------------------------------------------------------------------------------------------
@@ -15,8 +15,8 @@ Print 'Migrating 8.2.0.0 ...'
 -- -----------------------------------------------------------------------------------------------
 -- Always add your code just above this comment block
 -- -----------------------------------------------------------------------------------------------
-IF ([dbo].[IsSchemaVersionLessOrEqual](N'8.2.0') <> 0)
-	EXEC [dbo].[SetSchemaVersion] @value = N'8.2.0';
+IF ([AdminStore].[IsSchemaVersionLessOrEqual](N'8.2.0') <> 0)
+	EXEC [AdminStore].[SetSchemaVersion] @value = N'8.2.0';
 GO
 set noexec off
 -- -----------------------------------------------------------------------------------------------
