--- a/svc/db/FileStorage/FileStorage_Migration.tt
+++ b/svc/db/FileStorage/FileStorage_Migration.tt
@@ -29,6 +29,7 @@ GO
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Migration\8.0.0.0\8.0.0.0.sql" ) ) #>
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Migration\8.1.0.0\8.1.0.0.sql" ) ) #>
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Migration\8.2.0.0\8.2.0.0.sql" ) ) #>
+<#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Migration\8.2.1.0\8.2.1.0.sql" ) ) #>
 
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Functions\ValidateExpiryTime.sql" ) ) #>
 <#= System.IO.File.ReadAllText ( this.Host.ResolvePath ( @"Procedures.sql" ) ) #>
